...
        headerShown: false,
      })}
    >
      <Tab.Screen
        name="Dashboard"
        component={DashboardWithProvider}
        options={{ title: 'Dashboard', headerShown: false, tabBarTestID: 'tab-nav-dashboard' }}
      />
      {showOrdersTab && (
        <Tab.Screen
          name="Orders"
          component={OrdersStackNavigator}
          options={{ title: 'Order Management', headerShown: false, tabBarTestID: 'tab-nav-orders' }}
...
